Project section finished. Now I only have to update the 'proyecto.json' to update the card projects

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -12,3 +12,15 @@
     font-family: 'Texto';
     src: url('./fonts/Marcellus-Texto.ttf') format('truetype');
 }
+
+html {
+    font-family: 'Texto';
+}
+
+h1 {
+    font-family: 'Titulo';
+}
+
+h2 {
+    font-family: 'Subtitulo';
+}
