Fix some issues, know them in the README

--- a/src/styles/revealingAnimations.css
+++ b/src/styles/revealingAnimations.css
@@ -63,3 +63,8 @@
         transition: none !important;
     }
 }
+@media (max-width: 1250px) {
+    #Referents > div a {
+        transition: none !important;
+    }
+}
